<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen2"
    android:orientation="vertical">

    <TextView
        android:id="@+id/change_membership"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/change_membership"
        android:textAlignment="center"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/rbtnAnnualChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.09"
            android:text="@string/annual_member"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/rbtnDayPassChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.09"
            android:text="@string/day_pass"
            android:textColor="#FFFFFF" />
    </RadioGroup>

</LinearLayout>