<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:text="@string/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchBtn"
        android:layout_gravity="bottom"
        android:onClick="onSearch"/>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="465dp"
        tools:context="com.cunycodes.bikearound.MapsActivity"
        android:layout_marginTop="80dp"/>

    <Button
        android:id="@+id/poiBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75sp"
        android:onClick="onPOIClick"
        android:text="@string/points_of_interest" />

    <EditText
        android:id="@+id/textAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="40sp"
        android:ems="10"
        android:hint="@string/search_text"
        android:inputType="textPersonName" />
</FrameLayout>
