<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_passowrd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cunycodes.bikearound.LoginEmail"
    android:background="@color/darkGreen">

    <Button
        android:text="@string/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/re_signin"
        android:layout_weight="1"
        android:layout_below="@+id/linear_layoutpassword"
        android:background="@null"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="81dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <ImageView
        android:layout_width="wrap_content"
        app:srcCompat="@mipmap/backgroundbikes"
        android:id="@+id/imageView2"
        android:background="@null"
        android:layout_height="175dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:weightSum="1"
        android:id="@+id/linear_layoutpassword"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="79dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailText"
            android:hint="@string/email"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="100dp" />

        <Button
            android:text="@string/reset_password"
            android:layout_width="match_parent"
            android:id="@+id/reset_password"
            android:layout_weight="0.06"
            android:layout_marginBottom="200dp"
            android:background="@drawable/button_shape"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
