<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_disabled">


<LinearLayout
    android:id="@+id/title"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/quantum_ic_keyboard_arrow_down_white_36"
            android:id="@+id/btnBack"
            android:onClick="onBack"
            android:layout_weight="1.06"
            android:background="@null"
            android:rotation="90" />


    <TextView
        android:text="@null"
        android:layout_width="292dp"
        android:id="@+id/titleText"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:layout_marginLeft="10sp"
        android:textColor="@color/cardview_light_background" />

    </LinearLayout>
</LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10sp">

            <TextView
                android:text="@string/change_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/changePassword"
                android:onClick="onChange"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textColor="@color/cardview_light_background"
                android:layout_marginLeft="5sp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/quantum_ic_keyboard_arrow_down_white_36"
                android:id="@+id/btnChange"
                android:onClick="onChange"
                android:layout_weight="0.25"
                android:background="@null"
                android:rotation="270" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/delete"
            android:layout_marginBottom="10sp"
            android:layout_weight="0.82"
            android:layout_marginTop="10sp">

            <TextView
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/deleteHistory"
                android:layout_weight="1"
                android:onClick="onClick"
                android:textSize="24sp"
                android:textColor="@color/cardview_light_background"
                android:layout_marginLeft="5sp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/quantum_ic_keyboard_arrow_down_white_36"
                android:id="@+id/btndelete"
                android:layout_weight="0.19"
                android:onClick="onClick"
                android:background="@null"
                android:rotation="270" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/share"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp">

            <TextView
                android:text="@string/share"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/shareName"
                android:onClick="onShare"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textColor="@color/cardview_light_background"
                android:layout_marginLeft="5sp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_share"
                android:onClick="onShare"
                android:id="@+id/btnShare"
                android:background="@null"
                android:rotation="0"
                android:layout_weight="0.14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>

</RelativeLayout>